:hammer: [update] Styles and basic info header and navbar

--- a/src/App.css
+++ b/src/App.css
@@ -134,6 +134,32 @@ nav.navbar .navbar-nav a.nav-link.navbar-link:hover,
 nav.navbar .navbar-nav a.nav-link.navbar-link.active {
   opacity: 1;
 }
+
+.offcanvas {
+  background-color: #121212 !important;
+  color: #fff !important;
+  z-index: 10000 !important;
+}
+
+.custom-white {
+  filter: brightness(0) invert(1);
+}
+
+.btn-custom {
+  color: #fff !important;
+}
+nav.navbar .navbar-nav .nav-link.navbar-link {
+  font-weight: 400;
+  color: #fff !important;
+  letter-spacing: 0.8px;
+  padding: 0 25px;
+  font-size: 18px;
+  opacity: 0.75;
+}
+nav.navbar .navbar-nav a.nav-link.navbar-link:hover,
+nav.navbar .navbar-nav a.nav-link.navbar-link.active {
+  opacity: 1;
+}
 span.navbar-text {
   display: flex;
   align-items: center;
