--- a/src/App.css
+++ b/src/App.css
@@ -346,7 +346,8 @@ nav.navbar .navbar-toggler[aria-expanded='true'] .navbar-toggler-icon {
 
 /************ Skills Css ************/
 .skill {
-  padding: 0 0 50px 0;
+  /* margin-top: 100px; */
+  padding: 100px 0;
   position: relative;
   background: linear-gradient(
     90deg,
@@ -381,6 +382,11 @@ nav.navbar .navbar-toggler[aria-expanded='true'] .navbar-toggler-icon {
   width: 50%;
   margin: 0 auto 15px auto;
 }
+
+.skill-slider .item img.item-80-width {
+  width: 80%;
+}
+
 .background-image-left {
   top: 28%;
   position: absolute;
