--- a/src/App.css
+++ b/src/App.css
@@ -378,6 +378,14 @@ nav.navbar .navbar-toggler[aria-expanded='true'] .navbar-toggler-icon {
   margin: 0 auto;
   position: relative;
 }
+
+.skill-slider .item {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
 .skill-slider .item img {
   width: 50%;
   margin: 0 auto 15px auto;
