--- a/src/App.css
+++ b/src/App.css
@@ -425,7 +425,7 @@ nav.navbar .navbar-toggler[aria-expanded='true'] .navbar-toggler-icon {
   line-height: 1.5em;
   margin: 14px auto 30px auto;
   text-align: center;
-  width: 56%;
+  width: 90%;
 }
 .project .nav.nav-pills {
   width: 72%;
@@ -486,6 +486,11 @@ nav.navbar .navbar-toggler[aria-expanded='true'] .navbar-toggler-icon {
   /* border: 1px solid #121212; */
   overflow: hidden;
   margin-bottom: 24px;
+}
+
+.proj-imgbx img {
+  max-height: 320px;
+  min-height: 200px;
 }
 .proj-imgbx::before {
   content: '';
